2008-01-24  Satoshi Nakagawa <artension@gmail.com>

	Added ISO-8859-1 support.

2008-01-24  Satoshi Nakagawa <artension@gmail.com>

	Tweaked the message parser to make sure to parse prefix better.

2008-01-22  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, NSCell in NSTableView should be aware of copy in ObjC level.

2008-01-22  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, 'privmsg' and 'notice' type pastes should be sent quickly after pushing the send button.

2008-01-20  Satoshi Nakagawa <artension@gmail.com>

	Made sorting nicks for auto completion stable.

==== LimeChat 0.14.3 ====

2008-01-17  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, the selected item in the server tree should be initialized.

2008-01-17  Satoshi Nakagawa <artension@gmail.com>

	Changed to allow '@' in nickname.

2008-01-15  Satoshi Nakagawa <artension@gmail.com>

	Changed to append a pasted url in the input text field.

2008-01-15  Satoshi Nakagawa <artension@gmail.com>

	Implementing plugin.

2008-01-08  Satoshi Nakagawa <artension@gmail.com>

	Replaced NSNumber#float? to NSNumber#integer?.

2008-01-07  Satoshi Nakagawa <artension@gmail.com>

	Added an exception handler in completing nick for safety.

2008-01-07  Satoshi Nakagawa <artension@gmail.com>

	Changed to not match a domain name followed by an alphabet or a digit.

2008-01-06  Satoshi Nakagawa <artension@gmail.com>

	Changed to not open a talk for 'NickServ' or 'ChanServ' when sending a command.

2008-01-05  Satoshi Nakagawa <artension@gmail.com>

	Added '%9n' and '%@%n' support for nick format.

2008-01-04  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, logs were cleared when reloading theme.

2008-01-04  Satoshi Nakagawa <artension@gmail.com>

	Fixed a nil access bug when updating a nick completion weight.
	Fixed a bug, a node class should be checked when removing an element in log views.

2008-01-03  Satoshi Nakagawa <artension@gmail.com>
